# firefly-cash-converter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please.yml
.github/workflows/: build-wheels.yml  python-publish.yml  release-please.yml  test.yml
examples/: config.toml
src/fireflyConverter/: __init__.py  __main__.py  cli.py  data.py  fireflyInterface.py  fireflyPayload.py  loadData.py
src/gnucashConverter/: __main__.py  __scripts__.py  cli.py  convertData.py  data.py  fireflyInterface.py  fireflyPayload.py  loadData.py
test/config/: queries.toml
test/data/: barclays.xlsx  common.csv  paypal.csv  paypal.xlsx  trade_republic.csv
test/fireflyServer/: .env  createToken.sh  createUserToken.php  docker-compose.yml  setupToken.py  waitForFirefly.py
test/testFireflyConverter/: __init__.py  testCli.py  testFireflyInterface.py  testLoadData.py
test/testgnucashConverter/: testCli.py  testConvertData.py  testFireflyInterface.py  testLoadData.py
