[project]
name = "gnucashConvert"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "pytr",
    "toml",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "gnucash-convert",
]

[project.scripts]
convert = "gnucashConverter.__scripts__:convert"
