[project]
name = "firefly-cash-converter"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "toml",
    "requests"
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "firefly-converter",
]

[project.scripts]
cash = "fireflyConverter.__main__:main"
